Bug 402264: When we're scaling printed content, don't scale unconstrained heights.  r+sr=roc a=damons